@@ -38,20 +38,14 @@
 
     With HP&apos;s &quot;hpijs&quot; this printer can be used as a
     printer of the old DeskJet 900 series (DeskJet 970C and alike),
-    but the photo mode is not supported.&lt;p&gt;
-
-    The best output one gets with HP&apos;s HPIJS 1.3 or newer. If you
-    cannot update to HPIJS 1.3 for some reason, you can also use HPIJS
-    1.2.2 with the patches from Matthias Bunte and Richard
-    Spencer-Smith (&quot;hpijs-rss&quot;). The GIMP-Print driver also
-    works (Model setting: &quot;pcl-900&quot;), but only up to 600
-    dpi.&lt;p&gt;
+    but the photo mode is not supported. Due to several other modes
+    not working the GIMP-Print driver is recommended.&lt;p&gt;
 
     300x300 and 600x600 works, all print quality settings work,
     compressions work.&lt;p&gt;
 
     This is a very fast printer; probably 3x as fast as typical
-    inkjets.&lt;p&gt;
+    inkjets of that time.&lt;p&gt;
 
     Output is very good quality - 30 to 45 sec for a page with a 6x6in
     photo and text.&lt;p&gt;
