@@ -27,7 +27,7 @@
   <autodetect>
   <!--no known parport probe information--></autodetect>
   <functionality>A</functionality>
-  <driver>hpijs</driver>
+  <driver>gimp-print</driver>
   <!--affiliate keys; modify and face my wrath!-->
   <buyit>buy:6576,buy(M PRO):32355</buyit>
   <!--no "contrib_url"-->
@@ -39,17 +39,13 @@
     2500Cse model is US retail channel model, 2500Cxi model is US
     business channel model, 2500C+ includes PCL 5 support.&lt;p&gt;
 
-    Best output quality reachable with the &quot;hpijs&quot;
-    driver.&lt;p&gt;
+    With HP&apos;s &quot;hpijs&quot; this printer can be used as a
+    printer of the old DeskJet 900 series (DeskJet 970C and alike),
+    but the photo mode is not supported. Due to several other modes
+    not working the GIMP-Print driver is recommended.&lt;p&gt;
 
-    When used with HP&apos;s &quot;hpijs&quot; driver, this printer
-    does the dithering and color adjustment internally. As input it
-    takes simple RGB data as used for screen display.&lt;p&gt;
-
-    Note that in contrary to most other current HP inkjet printers
-    there is no paper type sensor in the printer. You have to choose
-    one of the photo modes manually when using photo paper. There are
-    photo modes with 300 and 600 dpi.&lt;p&gt;
+    In the PCL-5c (Color LaserJet) emulation this printer is extremely
+    slow.&lt;p&gt;
 
     </en>
   </comments>
