@@ -42,6 +42,15 @@
     The 2500CM model has 12M RAM, the 2500CM Pro model has
     20MB RAM.&lt;p&gt;
 
+    In PCL mode this printer can be used as a printer of the old
+    DeskJet 900 series (DeskJet 970C and alike) with HP&apos;s
+    &quot;hpijs&quot;, but the photo mode is not supported. Due to
+    several other modes not working GIMP-Print is the better PCL
+    driver for this printer.&lt;p&gt;
+
+    In the PCL-5c (Color LaserJet) emulation this printer is extremely
+    slow.&lt;p&gt;
+
     </en>
   </comments>
 </printer>
