@@ -28,6 +28,10 @@
 	* driver/hl1250.xml: Removed "<nopjl />" tag, now JCL options can
 	  also be added if the driver already supplies a JCL header.
 
+	* printer/HP-2000C.xml, printer/HP-2500C.xml,
+	  printer/HP-2500CM.xml: Recommended GIMP-Print as best PCL driver
+	  for these models.
+
 	* README: Updated for support of nested composite options.
 
 2003-07-29  David Suffield <david.suffield@hp.com>
